--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "project001",
+  "name": "scream-simple-calculator",
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
   "type": "module",
+  "bin": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
